--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -35,11 +35,39 @@
 </style>
 
 <script>
+
 function initMap(){
-  let map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('map'), {
   center: {lat: 35.681236, lng: 139.767125},
   zoom: 8
   });
+  
+   <% @temperatures.each do |temperature| %>
+  marker = new google.maps.Marker({
+    position:  {lat: <%=temperature.latitude %>, lng:<%=temperature.longitude %>},
+    map: map,
+    icon: {
+		fillColor: "#FF0000",                //塗り潰し色
+		fillOpacity: 0.8,                    //塗り潰し透過率
+		path: google.maps.SymbolPath.CIRCLE, //円を指定
+		scale: 8,                           //円のサイズ
+		strokeColor: "#FF0000",              //枠の色
+		strokeWeight: 1.0                    //枠の透過率
+	},
+	label: {
+		text: '<%=temperature.unit_id %>',                           //ラベル文字
+		color: '#FFFFFF',                    //文字の色
+		fontSize: '20px'                     //文字のサイズ
+	},
+  });
+  
+  infowindow = new google.maps.InfoWindow({
+    content: '<%=temperature.temperature %>',
+  });
+  
+  infowindow.open(map, marker);
+  
+   <% end %>
 }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ-iUrMR3kpO9ir_CO0OXdg2hdiKsolnM&callback=initMap" async defer></script>
