--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -1,13 +1,68 @@
- <% @temperatures.each do |temperature| %>
- <%=temperature.temperature %>
- <% end %>
+ <%= image_tag "tablet.svg", size: '100x200' %>
  
- <%= @temperature_data %>
- <%= line_chart @temperature_data %>
+ <ul>
+  <li><%= "ユニット　　" %><%= @units.unit %></li>
+  <li><%= "出発地　　" %><%= @units.origin %></li>
+  <li><%= "目的地　　" %><%= @units.destination %></li>
+  <li><%= "所有者　　" %><%= @units.owner %></li>
+ </ul>
  
- <%= line_chart Temperature.group(:time).sum(:temperature) %>
- <%= line_chart @temperatures.temperature_data %>
- <%= line_chart @chart %>
+ <ul>
+  <li><%= link_to '詳細', unit_path %></li>
+  <li><%= link_to '結果', results_path %></li>
+  <li><%= link_to '設定', units_path %></li>
+</ul>
  
- <%= Unit.joins(:temperatures).select("units.*, temperatures.*").last.temperature %>
+ <%= Time.zone.now.strftime("%Y-%m-%d %H:%M") %>
+
+<h2>gmap</h2>
+<div id='map'></div>
+
+<style>
+#map{
+  height: 400px;
+}
+</style>
+
+<script>
+
+function initMap(){
+  map = new google.maps.Map(document.getElementById('map'), {
+  center: {lat: 35.681236, lng: 139.767125},
+  zoom: 8
+  });
+  
+   <% @temperatures.each do |temperature| %>
+  marker = new google.maps.Marker({
+    position:  {lat: <%=temperature.latitude %>, lng:<%=temperature.longitude %>},
+    map: map,
+    icon: {
+		fillColor: "#FF0000",                //塗り潰し色
+		fillOpacity: 0.8,                    //塗り潰し透過率
+		path: google.maps.SymbolPath.CIRCLE, //円を指定
+		scale: 8,                           //円のサイズ
+		strokeColor: "#FF0000",              //枠の色
+		strokeWeight: 1.0                    //枠の透過率
+	},
+	label: {
+		text: '<%=temperature.unit_id %>',                           //ラベル文字
+		color: '#FFFFFF',                    //文字の色
+		fontSize: '20px'                     //文字のサイズ
+	},
+  });
+  
+  infowindow = new google.maps.InfoWindow({
+    content: '<%=temperature.temperature %>',
+  });
+  
+  infowindow.open(map, marker);
+  
+   <% end %>
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ-iUrMR3kpO9ir_CO0OXdg2hdiKsolnM&callback=initMap" async defer></script>
+ 
+
+ <%= line_chart @chart, title: "温度推移" ,xtitle: "日時", ytitle: "温度（℃）" %>
+ 
  
