--- a/app/views/units/results.html.erb
+++ b/app/views/units/results.html.erb
@@ -1,7 +1,13 @@
+ <ul>
+  <li><%= link_to '詳細', unit_path %></li>
+  <li><%= link_to '結果', results_path %></li>
+  <li><%= link_to '設定', units_path %></li>
+</ul>
+
 <h1>検索</h1>
 <%= form_with(url: results_path, method: :get, local: true) do |f| %>
 
-  <%= f.label :temperature, "期間" %>
+  <%= f.label :deviation, "期間" %>
   <%= f.date_field :day_from, value: @day_from %> ~
   <%= f.date_field :day_to, value: @day_to %>
   
@@ -9,16 +15,71 @@
 
 <% end %>
 
-<% @temperatures.each do |temperature| %>
+    <p><%='温度逸脱日時' %></p>
 
- <%# if temperature.temperature = 8 %>
+<% @deviations.each do |deviation| %>
 
-    <p><%= temperature.temperature %></p>
+    <p><%= deviation.time.strftime("%Y-%m-%d %H:%M")%><%= deviation.temperature %></p>
   
- <%# else %>
- 
- <%# end %>
 
 <% end %>
 
-<%= Temperature.where('temperature < ?', 8 ).first.temperature %>
+<ul>
+  <li><%='発送数　　' %><%= @dispatch_number %></li>
+  <li><%='温度逸脱　　' %><%= @deviation_number %></li>
+  <li><%='温度逸脱率　　'%><%= number_to_percentage(@deviation_rate) %></li>
+  
+</ul>
+
+<h2>gmap</h2>
+<div id='map'></div>
+
+<style>
+#map{
+  height: 400px;
+}
+</style>
+
+<script>
+
+function initMap(){
+  map = new google.maps.Map(document.getElementById('map'), {
+  center: {lat: 35.681236, lng: 139.767125},
+  zoom: 8
+  });
+  
+   <% @deviations.each do |deviation| %>
+  marker = new google.maps.Marker({
+    position:  {lat: <%=deviation.latitude %>, lng:<%=deviation.longitude %>},
+    map: map,
+    icon: {
+		fillColor: "#FF0000",                //塗り潰し色
+		fillOpacity: 0.8,                    //塗り潰し透過率
+		path: google.maps.SymbolPath.CIRCLE, //円を指定
+		scale: 8,                           //円のサイズ
+		strokeColor: "#FF0000",              //枠の色
+		strokeWeight: 1.0                    //枠の透過率
+	},
+	label: {
+		text: '<%=deviation.unit_id %>',                           //ラベル文字
+		color: '#FFFFFF',                    //文字の色
+		fontSize: '20px'                     //文字のサイズ
+	},
+  });
+  
+  infowindow = new google.maps.InfoWindow({
+    content: '<%=deviation.temperature %>',
+  });
+  
+  infowindow.open(map, marker);
+  
+   <% end %>
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ-iUrMR3kpO9ir_CO0OXdg2hdiKsolnM&callback=initMap" async defer></script>
+ 
+
+ <%= line_chart @chart, title: "温度推移" ,xtitle: "日時", ytitle: "温度（℃）" %>
+ 
+  
+  
