--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
   <body data-turbolinks="false">
     <%= render 'layouts/navbar' %>
     
+  <div class="container">
+    <%= render 'layouts/flash_messages' %>
+    
     <%= yield %>
   </body>
 </html>
