--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,3 +1,4 @@
 <div class="main-container">
 <p>Green ChainはIoTデバイスによる温度モニタリングを通じて高品質・クリーンなコールドチェーン構築をサポートするWebサービスです</p>
+<%= link_to '新規登録', signup_path, class: 'btn btn-lg btn-primary' %>
 </div>
