--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,12 +7,19 @@
       </button>
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item"><%= link_to 'トップ', units_path, class: 'nav-link' %></li>
-          <li class="nav-item"><%= link_to '結果', units_path, class: 'nav-link' %></li>
-          <li class="nav-item"><%= link_to 'ユニットリスト', units_path, class: 'nav-link' %></li>
-          <li class="nav-item"><a href="#" class="nav-link">ログアウト</a></li>
-        </ul>
+        <% if logged_in? %>
+          <ul class="navbar-nav">
+            <li class="nav-item"><%= link_to 'トップ', units_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to '結果', units_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'ユニットリスト', units_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
+          </ul>
+        <% else %>
+          <ul class="navbar-nav">
+            <li class="nav-item"><%= link_to '新規登録', signup_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'ログイン', login_path, class: 'nav-link' %></li>
+          </ul>
+        <% end %>
       </div>
     </div>
   </nav>
