--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,4 +1,10 @@
-<div class="main-container">
-<p>Green ChainはIoTデバイスによる温度モニタリングを通じて高品質・クリーンなコールドチェーン構築をサポートするWebサービスです</p>
-<%= link_to '新規登録', signup_path, class: 'btn btn-lg btn-primary' %>
-</div>
+<% if logged_in? %>
+    <p>ログイン完了ユーザ: <%= current_user.name %></p>
+<% else %>
+    
+    <div class="main-container">
+    <p>Green ChainはIoTデバイスによる温度モニタリングを通じて高品質・クリーンなコールドチェーン構築をサポートするWebサービスです</p>
+    <%= link_to '新規登録', signup_path, class: 'btn btn-lg btn-primary' %>
+    <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+<% end %>
