--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -8,3 +8,31 @@
   width: 100%;
   background-size:cover;
 }
+
+.circle_blue{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: blue;
+}
+
+.circle_orange{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #FF6600;
+}
+
+.circle_red{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: red;
+}
+
+.circle_gray{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: gray;
+}
