--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body data-turbolinks="false">
     <%= render 'layouts/navbar' %>
     
-  <div class="container">
+  <div class="container-fluid">
     <%= render 'layouts/flash_messages' %>
     
     <%= yield %>
