--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,8 +9,8 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <% if logged_in? %>
           <ul class="navbar-nav">
-            <li class="nav-item"><%= link_to 'トップ', units_path, class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to '結果', units_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'トップ', root_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to '結果', results_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'ユニットリスト', units_path, class: 'nav-link' %></li>
             <li class="nav-item"><%= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link' %></li>
           </ul>
