--- a/app/assets/stylesheets/units.scss
+++ b/app/assets/stylesheets/units.scss
@@ -9,10 +9,21 @@
     margin-top: 5px;
     margin-left: 10px;
 }
+
+.main_units2{
+    width: 50%;
+    margin-top: 5px;
+    margin-left: 200px;
+}
+
 aside_units{
     margin-top: 30px;
     width: 50%;
     
+}
+
+footer{
+    width: 30%;
 }
 
 .link{
@@ -21,4 +32,13 @@ aside_units{
 
 .p{
     line-height: 100%;
+}
+
+li{
+margin-bottom: 10px;
+}
+
+.box2{
+    margin-top: 300px;
+    margin-left: 50px;
 }
